--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,4 @@
-name: fake-shop
+name: ecommerce
 
 services:
   app:
@@ -6,9 +6,9 @@ services:
     ports:
       - 5000:5000
     environment:
-      DB_PASSWORD_FILE: /run/secrets/POSTGRESQL_PASS
+      DB_PASSWORD_FILE: /run/secrets/DATABASE_PASS
     secrets:
-      - POSTGRESQL_PASS
+      - DATABASE_PASS
     depends_on:
       - backend
 
@@ -17,10 +17,10 @@ services:
     environment:
       POSTGRES_DB: ecommerce
       POSTGRES_USER: ecommerce
-      POSTGRES_PASSWORD_FILE: /run/secrets/POSTGRESQL_PASS
+      POSTGRES_PASSWORD_FILE: /run/secrets/DATABASE_PASS
     secrets:
-      - POSTGRESQL_PASS
+      - DATABASE_PASS
  
 secrets:
-  POSTGRESQL_PASS:
-    file: postgresql.pass
+  DATABASE_PASS:
+    file: database.pass
